Fixes for migration from 2.8 to 2.9

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,14 +60,6 @@ set-window-option -g automatic-rename on
 set-option -g allow-rename on
 # -----------------------------}
 
-## Pane Configurations --------{
-# border colours
-set -g pane-border-fg default
-set -g pane-border-bg default
-set -g pane-active-border-fg brightyellow
-set -g pane-active-border-bg colour237
-## --------------------}
-
 ## Keybindings -----------{
 # Switch to Last active window
 bind-key a last-window
@@ -76,8 +68,8 @@ bind-key a last-window
 bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
 
 # quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+# unbind ^A
+bind Tab select-pane -t :.+
 
 # Split
 unbind %
@@ -90,7 +82,7 @@ bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
 #urxvt tab like window switching (-n: no prior escape seq)
-bind down new-window -c '#{pane_current_path}'
+# bind down new-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind left prev
 bind right next
@@ -106,6 +98,11 @@ bind L resize-pane -R 10
 # Kill window
 bind X kill-window
 bind Q kill-session
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
 # Mouse support - set to on if you want to use the mouse ---{
 set -g mouse on
@@ -125,12 +122,17 @@ onedark_comment_grey="#5c6370"
 seperator="#[fg=$onedark_black,bg=$onedark_visual_grey,nobold,nounderscore,noitalics]"
 # -------------------}
 
-# Messaging ---------------{
-set -g message-fg brightwhite
-set -g message-bg blue
-set -g message-command-fg blue
-set -g message-command-bg black
+# Message Style ---------------{
+set -g message-style fg=brightwhite,bg=blue
+set -g message-command-style fg=blue,bg=black
 # --------------------}
+
+## Pane Configurations --------{
+# border colours
+set -g pane-border-style fg=default,bg=default
+set -g pane-active-border-style fg=brightred,bg=colour237
+## --------------------}
+
 
 # Visual notification of activity in other windows --{
 setw -g monitor-activity on
@@ -142,26 +144,19 @@ set -g status on
 
 set -g status-left-length 100
 set -g status-right-length 100
-set -g status-right-attr none
-set -g status-left-attr none
-set -g status-attr none
+# set -g status-style none
+# set -g status-left-style blink,underline
+# set -g status-right-style blink,underline
 
-set -g message-fg "$onedark_white"
-set -g message-bg "$onedark_black"
-set -g message-command-fg "$onedark_white"
-set -g message-command-bg "$onedark_black"
+set -g message-style fg="$onedark_white",bg="$onedark_black"
+set -g message-command-style fg="$onedark_white",bg="$onedark_black"
 
 # Window status alignment
 set -g status-justify centre
 
-setw -g window-status-fg "$onedark_black"
-setw -g window-status-bg "$onedark_black"
-setw -g window-status-attr none
-
-setw -g window-status-activity-bg "$onedark_black"
-setw -g window-status-activity-fg "$onedark_black"
-setw -g window-status-activity-attr none
-setw -g window-status-separator ""
+setw -g window-status-style fg="$onedark_black",bg="$onedark_black"
+setw -g window-status-activity-style fg="$onedark_black",bg="$onedark_black"
+setw -g window-status-separator " "
 
 set -g status-bg "$onedark_black"
 set -g status-fg "$onedark_white"
@@ -169,10 +164,10 @@ set -g status-fg "$onedark_white"
 set -g @prefix_highlight_fg "$onedark_black"
 set -g @prefix_highlight_bg "$onedark_green"
 set -g @prefix_highlight_copy_mode_attr "fg=$onedark_black,bg=$onedark_green"
-set -g @prefix_highlight_output_prefix "  "
+set -g @prefix_highlight_output_prefix " | "
 
-set -g window-status-format "#[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]#[fg=$onedark_white,bg=$onedark_black,bold] #I  #W #[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
-set -g window-status-current-format "#[fg=$onedark_black,bg=$onedark_visual_grey,nobold,nounderscore,noitalics]#[fg=$onedark_white,bg=$onedark_visual_grey,bold] #I  #W #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
+set -g window-status-format "#[fg=$onedark_white,bg=$onedark_black,bold][#I]:#W #[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
+set -g window-status-current-format "#[fg=$onedark_yellow,bg=$onedark_visual_grey,bold][#I]:#W"
 
 set -g status-left "#[fg=$onedark_visual_grey,bg=$onedark_green,bold] #S #{prefix_highlight}#[fg=$onedark_green,bg=$onedark_black,nobold,nounderscore,noitalics] $seperator#[fg=$onedark_white,bg=$onedark_visual_grey,bold] #(whoami) #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]$seperator #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #H #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]$seperator #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #I:#P #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]#[fg=$onedark_visual_grey,bg=$onedark_visual_grey,nounderscore,nobold,noitalics] #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #{ipinfo}  #{free_mem}"
