--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -119,6 +119,31 @@ onedark_white="#aab2bf"
 onedark_green="#98c379"
 onedark_visual_grey="#3e4452"
 onedark_comment_grey="#5c6370"
+
+base16_green="#a1b56c"
+base16_red="#ab4642"
+base16_yellow="#f7ca88"
+base16_blue="#7cafc2"
+base16_magenta="#ba8baf"
+base16_cyan="#86c1b9"
+base16_c16="#dc9656"
+base16_c17="#a16946"
+
+## Nord palette: https://www.nordtheme.com/docs/colors-and-palettes
+nord0="#2E3440"
+nord1="#3B4252"
+nord2="#434C5E"
+nord3="#4C566A"
+nord7="#8fbcbb"
+nord8="#88c0d0"
+nord9="#81a1c1"
+nord10="#5e81ac"
+nord11="#BF616A"
+nord12="#D08770"
+nord13="#EBCB8B"
+nord14="#A3BE8C"
+nord15="#B48EAD"
+
 seperator="#[fg=$onedark_black,bg=$onedark_visual_grey,nobold,nounderscore,noitalics]"
 # -------------------}
 
@@ -130,7 +155,7 @@ set -g message-command-style fg=blue,bg=black
 ## Pane Configurations --------{
 # border colours
 set -g pane-border-style fg=default,bg=default
-set -g pane-active-border-style fg=brightred,bg=colour237
+set -g pane-active-border-style fg="$base16_c16",bg=colour237
 ## --------------------}
 
 
@@ -162,15 +187,15 @@ set -g status-bg "$onedark_black"
 set -g status-fg "$onedark_white"
 
 set -g @prefix_highlight_fg "$onedark_black"
-set -g @prefix_highlight_bg "$onedark_green"
-set -g @prefix_highlight_copy_mode_attr "fg=$onedark_black,bg=$onedark_green"
-set -g @prefix_highlight_output_prefix " | "
+set -g @prefix_highlight_bg "$base16_red"
+set -g @prefix_highlight_copy_mode_attr "fg=$onedark_black,bg=$base16_red"
+set -g @prefix_highlight_output_prefix " --> "
 
-set -g window-status-format "#[fg=$onedark_white,bg=$onedark_black,bold][#I]:#W #[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
-set -g window-status-current-format "#[fg=$onedark_yellow,bg=$onedark_visual_grey,bold][#I]:#W"
+set -g window-status-format "#[fg=$base16_yellow,bg=$nord3,bold][#I]:#W #[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
+set -g window-status-current-format "#[fg=$nord3,bg=$base16_yellow,bold][#I]:#W "
 
-set -g status-left "#[fg=$onedark_visual_grey,bg=$onedark_green,bold] #S #{prefix_highlight}#[fg=$onedark_green,bg=$onedark_black,nobold,nounderscore,noitalics] $seperator#[fg=$onedark_white,bg=$onedark_visual_grey,bold] #(whoami) #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]$seperator #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #H #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]$seperator #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #I:#P #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]#[fg=$onedark_visual_grey,bg=$onedark_visual_grey,nounderscore,nobold,noitalics] #[fg=$onedark_white,bg=$onedark_visual_grey,bold] #{ipinfo}  #{free_mem}"
+set -g status-left "#[fg=$onedark_visual_grey,bg=$base16_green,bold] #S #[fg=$onedark_visual_grey,bg=$onedark_black,bold] #[fg=#EBCB8B,bg=$nord3,bold] #(whoami)@#H #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore] #[fg=$onedark_white,bg=$onedark_black,bold] #[fg=$onedark_white,bg=$nord3,bold] [Mem unsued: #{free_mem}Gb] #[fg=$onedark_visual_grey,bg=$onedark_black,bold] #{prefix_highlight}"
 # -------------------------}
 
 # upgrade $TERM
@@ -196,7 +221,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 #set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'odedlaz/tmux-status-variables'
 # set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-open'
