--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -99,10 +99,10 @@ bind L resize-pane -R 10
 bind X kill-window
 bind Q kill-session
 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind h select-pane -L
+bind l select-pane -R
+bind j select-pane -U
+bind k select-pane -D
 
 # Mouse support - set to on if you want to use the mouse ---{
 set -g mouse on
@@ -128,6 +128,9 @@ base16_magenta="#ba8baf"
 base16_cyan="#86c1b9"
 base16_c16="#dc9656"
 base16_c17="#a16946"
+base16_bright_blue="#7cafc2"
+base16_bright_yellow="#f7ca88"
+base16_bright_magenta="#ba8baf"
 
 ## Nord palette: https://www.nordtheme.com/docs/colors-and-palettes
 nord0="#2E3440"
@@ -158,7 +161,6 @@ set -g pane-border-style fg=default,bg=default
 set -g pane-active-border-style fg="$base16_c16",bg=colour237
 ## --------------------}
 
-
 # Visual notification of activity in other windows --{
 setw -g monitor-activity on
 set -g visual-activity on
@@ -186,16 +188,57 @@ setw -g window-status-separator " "
 set -g status-bg "$onedark_black"
 set -g status-fg "$onedark_white"
 
-set -g @prefix_highlight_fg "$onedark_black"
-set -g @prefix_highlight_bg "$base16_red"
-set -g @prefix_highlight_copy_mode_attr "fg=$onedark_black,bg=$base16_red"
-set -g @prefix_highlight_output_prefix " --> "
+# PREFIX Highlight -----------------------------------------------------{
+set -g @prefix_highlight_fg "black"
+set -g @prefix_highlight_bg "green"
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr "fg=black,bg=$base16_yellow"
+set -g @prefix_highlight_prefix_prompt 'Wait'
+set -g @prefix_highlight_output_prefix '< '
+set -g @prefix_highlight_output_suffix ' >'
+set -g @prefix_highlight_empty_prompt ''
+# set -g @prefix_highlight_empty_attr 'fg=black, bg=green'
+set -g @prefix_highlight_empty_has_affixes 'off' # default is 'off'
+set -g @prefix_highlight_empty_prompt ''
+set -g @prefix_highlight_output_prefix ''
+set -g @prefix_highlight_output_suffix ''
+# ---------------------------------------------------------------------}
 
-set -g window-status-format "#[fg=$base16_yellow,bg=$nord3,bold][#I]:#W #[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
-set -g window-status-current-format "#[fg=$nord3,bg=$base16_yellow,bold][#I]:#W "
+# CPU Module -----------------------------------------------------{
+set -g @cpu_low_icon "=" # icon when cpu is low
+set -g @cpu_medium_icon "≡" # icon when cpu is medium
+set -g @cpu_high_icon "≣" # icon when cpu is high
 
-set -g status-left "#[fg=$onedark_visual_grey,bg=$base16_green,bold] #S #[fg=$onedark_visual_grey,bg=$onedark_black,bold] #[fg=#EBCB8B,bg=$nord3,bold] #(whoami)@#H #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore] #[fg=$onedark_white,bg=$onedark_black,bold] #[fg=$onedark_white,bg=$nord3,bold] [Mem unsued: #{free_mem}Gb] #[fg=$onedark_visual_grey,bg=$onedark_black,bold] #{prefix_highlight}"
+set -g @cpu_low_fg_color "" # foreground color when cpu is low
+set -g @cpu_medium_fg_color "" # foreground color when cpu is medium
+set -g @cpu_high_fg_color "" # foreground color when cpu is high
+
+set -g @cpu_low_bg_color "#[bg=green]" # background color when cpu is low
+set -g @cpu_medium_bg_color "#[bg=yellow]" # background color when cpu is medium
+set -g @cpu_high_bg_color "#[bg=red]" # background color when cpu is high
+
+set -g @cpu_percentage_format "%3.1f%%" # printf format to use to display percentage
+# ----------------------------------------------------------------}
+
+set -g @net_speed_interfaces "wlp0s20f0u1"
+
+set -g window-status-format "#[fg=$base16_bright_yellow,bg=$nord3,bold][#I]:#W \
+#[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
+
+set -g window-status-current-format "#[fg=$nord3,bg=$base16_bright_yellow,bold][#I]:#W "
+
+set -g status-left "#[fg=$onedark_visual_grey,bg=$base16_green,bold,nounderscore,italics] \
+$ #S #[fg=$onedark_visual_grey,bg=$onedark_black,bold,noitalics,nounderscore] \
+#[fg=$base16_c16,bg=$onedark_visual_grey,bold][ #(whoami)@#H ]\
+#[fg=$onedark_visual_grey,bg=$onedark_black,bold,underscore,italics] \
+#{prefix_highlight}"
+
+set -g status-right "#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold]\
+[ CPU: #{cpu_percentage} #{cpu_icon} ]\
+#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]  \
+#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ Mem Free: #{free_mem}Gb ]\
+#[fg=$onedark_visual_grey,bg=$onedark_black,bold] \
+#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ #{net_speed} ]"
 # -------------------------}
 
 # upgrade $TERM
@@ -219,14 +262,12 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-#set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'odedlaz/tmux-status-variables'
-# set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-fpp'
+set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 # ---------------------------------}
 
 set -g @resurrect-capture-pane-contents 'on'
