--- a/polybar/polybar-2/colors.ini
+++ b/polybar/polybar-2/colors.ini
@@ -1,10 +1,10 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
-;;	   ______      __               
+;;	   ______      __
 ;;	  / ____/___  / /___  __________
 ;;	 / /   / __ \/ / __ \/ ___/ ___/
-;;	/ /___/ /_/ / / /_/ / /  (__  ) 
-;;	\____/\____/_/\____/_/  /____/  
+;;	/ /___/ /_/ / / /_/ / /  (__  )
+;;	\____/\____/_/\____/_/  /____/
 ;;
 ;; Created By Aditya Shakya @adi1090x
 ;;
@@ -13,14 +13,15 @@
 [color]
 
 ;; Active Colors
-bg = #8c263238
-fg = #DFDFDF
+; bg = #8c263238
+bg = #263238
+fg = ${color.yeshade2}
 ac = #d26273
 
 mb = #263238
 mgf = #263238
 mf = #00BCD4
- 
+
 ;; Bars
 bi = #dc344148
 be = #dc344148
@@ -67,7 +68,7 @@ amshade6 = #FFCA28
 amshade7 = #FFD54F
 amshade8 = #FFE082
 
-; Blue 
+; Blue
 blshade1 = #0D47A1
 blshade2 = #1565C0
 blshade3 = #1976D2
@@ -247,11 +248,23 @@ yeshade6 = #FFEE58
 yeshade7 = #FFF176
 yeshade8 = #FFF59D
 
+base16_green="#a1b56c"
+base16_red="#ab4642"
+base16_yellow="#f7ca88"
+base16_blue="#7cafc2"
+base16_magenta="#ba8baf"
+base16_cyan="#86c1b9"
+base16_c16="#dc9656"
+base16_c17="#a16946"
+base16_bright_blue="#7cafc2"
+base16_bright_yellow="#f7ca88"
+base16_bright_magenta="#ba8baf"
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_    
-;;	 / /___/ /_/ / __/    
-;;	/_____/\____/_/       
+;;	  / __/ / / / / /_
+;;	 / /___/ /_/ / __/
+;;	/_____/\____/_/
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
