--- a/polybar/polybar-2/config.ini
+++ b/polybar/polybar-2/config.ini
@@ -125,21 +125,6 @@ padding = 0
 module-margin-left = 1
 module-margin-right = 1
 
-; Fonts are defined using <font-name>;<vertical-offset>
-; Font names are specified using a fontconfig pattern.
-;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
-;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
-; See the Fonts wiki page for more details
-
-;;font-0 = "Misc Termsyn:size=12;1"
-;;font-1 = "Wuncon Siji:size=12;1"
-
-;;font-0 = "Ubuntu Condensed:size=10;2"
-;;font-1 = "icomoon\-feather:size=10;2"
-;;font-2 = "xos4 Terminus:size=12;1"
-
 ; Text Fonts
 font-0 = Iosevka Nerd Font:style=Medium:size=10;3
 ; Icons Fonts
@@ -150,32 +135,6 @@ font-2 = Iosevka Nerd Font:style=Medium:size=16;3
 font-3 = Iosevka Nerd Font:style=Medium:size=12;3
 ; Smaller font size for shorter spaces
 font-4 = Iosevka Nerd Font:style=Medium:size=7;3
-
-
-; Modules are added to one of the available blocks
-;   modules-left = cpu ram
-;   modules-center = xwindow xbacklight
-;   modules-right = ipc clock
-
-;; Available modules
-;;
-;alsa backlight battery
-;bspwm cpu date
-;filesystem github i3
-;memory mpd wired-network
-;network pulseaudio temperature
-;keyboard title workspaces
-;;
-;; User modules
-;checknetwork updates window_switch launcher powermenu sysmenu menu
-;;
-;; Bars
-;cpu_bar memory_bar filesystem_bar mpd_bar
-;volume brightness battery_bar
-
-;;modules-left = launcher workspaces
-;;modules-center = mpd
-;;modules-right = updates colors-switch alsa battery backlight checknetwork date sysmenu
 
 [bar/top]
 inherit = bar/main
@@ -327,10 +286,10 @@ cursor-scroll =
 ;;scroll-down = bspc desktop -f next.local
 
 ;i3
-;;scroll-up = i3wm-wsnext
-;;scroll-down = i3wm-wsprev
-;;scroll-up = i3-msg workspace next_on_output
-;;scroll-down = i3-msg workspace prev_on_output
+;scroll-up = i3wm-wsnext
+;scroll-down = i3wm-wsprev
+;scroll-up = i3-msg workspace next_on_output
+;scroll-down = i3-msg workspace prev_on_output
 
 ;openbox
 ;awesome
@@ -356,7 +315,7 @@ throttle-output-for = 10
 throttle-input-for = 30
 
 ; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
-screenchange-reload = false
+screenchange-reload = true
 
 ; Compositing operators
 ; @see: https://www.cairographics.org/manual/cairo-cairo-t.html#cairo-operator-t
