Fix silly bug introduced with latest tmux update

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -78,7 +78,7 @@ unbind o
 # unbind n
 # unbind p
 
-bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
+bind '\' split-window -h -c '#{pane_current_path}' # Split panes horizontal
 bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
 #urxvt tab like window switching (-n: no prior escape seq)
@@ -264,7 +264,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'odedlaz/tmux-status-variables'
-set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'tmux-plugins/tmux-cpu'
