Minor change in status bar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -236,7 +236,7 @@ $ #S #[fg=$onedark_visual_grey,bg=$onedark_black,bold,noitalics,nounderscore] \
 set -g status-right "#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold]\
 [ CPU: #{cpu_percentage} #{cpu_icon} ]\
 #[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]  \
-#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ Mem Free: #{free_mem}Gb ]\
+#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ Mem Free: #{free_mem} ]\
 #[fg=$onedark_visual_grey,bg=$onedark_black,bold] \
 #[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ #{net_speed} ]"
 # -------------------------}
