--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -10,37 +10,40 @@
 #
 
 [debug]
+notifications = 3
+python = 3
 
 [startup]
-command_after_plugins = "/exec -nosw -nosh -norc -buffer highlights true;/command -buffer exec.highlights core /buffer set time_for_each_line 1"
+command_after_plugins = ""
 command_before_plugins = ""
-display_logo = on
-display_version = on
+display_logo = off
+display_version = off
 sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
 align_multiline_words = on
-bar_more_down = "++"
-bar_more_left = "<<"
-bar_more_right = ">>"
-bar_more_up = "--"
+bar_more_down = "▼"
+bar_more_left = "◀"
+bar_more_right = "▶"
+bar_more_up = "▲"
 bare_display_exit_on_input = on
-bare_display_time_format = "%H:%M"
+bare_display_time_format = "%H:%M:%S"
 buffer_auto_renumber = on
-buffer_notify_default = message
+buffer_notify_default = all
 buffer_position = end
 buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = prefix_message
-buffer_time_format = "${color:252}%H${color:245}:%M${color:240}:%S"
+buffer_time_format = "%H:%M:%S"
+buffer_time_same = ""
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
 color_inactive_prefix = on
 color_inactive_prefix_buffer = on
-color_inactive_time = off
+color_inactive_time = on
 color_inactive_window = on
 color_nick_offline = off
 color_pairs_auto_reset = 5
@@ -54,7 +57,7 @@ day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
 eat_newline_glitch = off
 emphasized_attributes = ""
-highlight = "*pascalpoitras*"
+highlight = ""
 highlight_regex = ""
 highlight_tags = ""
 hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
@@ -79,16 +82,17 @@ item_away_message = on
 item_buffer_filter = "⚑"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
-item_time_format = "%H:%M"
+item_time_format = "%H:%M:%S"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
 key_grab_delay = 800
-mouse = off
+mouse = on
 mouse_timer_delay = 100
 nick_color_force = ""
 nick_color_hash = djb2
+nick_color_hash_salt = ""
 nick_color_stop_chars = "_|["
 nick_prefix = ""
 nick_suffix = ""
@@ -96,21 +100,22 @@ paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
-prefix_action = "⚡"
+prefix_action = "*"
 prefix_align = right
-prefix_align_max = 0
-prefix_align_min = 0
+prefix_align_max = 16
+prefix_align_min = 16
 prefix_align_more = "+"
 prefix_align_more_after = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 0
 prefix_buffer_align_more = "+"
 prefix_buffer_align_more_after = on
-prefix_error = "⚠"
-prefix_join = "→"
-prefix_network = "ℹ "
-prefix_quit = "←"
-prefix_same_nick = "⤷"
+prefix_error = "×"
+prefix_join = "»"
+prefix_network = "!"
+prefix_quit = "«"
+prefix_same_nick = ""
+prefix_same_nick_middle = ""
 prefix_suffix = "│"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
@@ -119,12 +124,13 @@ read_marker = line
 read_marker_always_show = off
 read_marker_string = "─"
 save_config_on_exit = on
+save_config_with_fsync = off
 save_layout_on_exit = all
 scroll_amount = 3
 scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
-separator_horizontal = "—"
+separator_horizontal = "-"
 separator_vertical = ""
 tab_width = 1
 time_format = "%a, %d %b %Y %T"
@@ -136,23 +142,10 @@ word_chars_highlight = "!\u00A0,-,_,|,alnum"
 word_chars_input = "!\u00A0,-,_,|,alnum"
 
 [palette]
-113 = "green"
-130 = "brown"
-135 = "purple"
-170 = "magenta"
-196 = "lightred"
-201 = "lightmagenta"
-208 = "orange"
-3 = "yellow"
-39 = "cyan"
-45 = "aqua"
-46 = "lightgreen"
-51 = "lightcyan"
-81 = "lightblue"
 
 [color]
-bar_more = lightmagenta
-chat = default
+bar_more = 247
+chat = 247
 chat_bg = default
 chat_buffer = white
 chat_channel = white
@@ -162,9 +155,9 @@ chat_highlight = yellow
 chat_highlight_bg = magenta
 chat_host = cyan
 chat_inactive_buffer = default
-chat_inactive_window = default
+chat_inactive_window = 240
 chat_nick = lightcyan
-chat_nick_colors = "red,green,brown,blue,magenta,cyan,white,lightred,lightgreen,yellow,lightblue,lightmagenta,lightcyan"
+chat_nick_colors = "brown"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
@@ -180,15 +173,15 @@ chat_prefix_join = lightgreen
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = lightred
-chat_prefix_suffix = green
-chat_read_marker = magenta
+chat_prefix_suffix = 236
+chat_read_marker = brown
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = default
-chat_time_delimiters = brown
+chat_time = 240
+chat_time_delimiters = 240
 chat_value = cyan
 chat_value_null = blue
 emphasized = yellow
@@ -196,25 +189,25 @@ emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
 item_away = yellow
-nicklist_away = cyan
-nicklist_group = green
-separator = blue
+nicklist_away = 247
+nicklist_group = 247
+separator = 236
 status_count_highlight = magenta
-status_count_msg = brown
-status_count_other = default
+status_count_msg = 247
+status_count_other = 247
 status_count_private = green
 status_data_highlight = lightmagenta
-status_data_msg = yellow
-status_data_other = default
+status_data_msg = 247
+status_data_other = 247
 status_data_private = lightgreen
 status_filter = green
 status_more = yellow
 status_mouse = green
-status_name = white
+status_name = 247
 status_name_ssl = lightgreen
-status_nicklist_count = default
+status_nicklist_count = 247
 status_number = yellow
-status_time = default
+status_time = 240
 
 [completion]
 base_word_until_cursor = on
@@ -230,6 +223,7 @@ partial_completion_command = off
 partial_completion_command_arg = off
 partial_completion_count = on
 partial_completion_other = off
+partial_completion_templates = "config_options"
 
 [history]
 display_default = 5
@@ -247,41 +241,13 @@ gnutls_handshake_timeout = 30
 proxy_curl = ""
 
 [plugin]
-autoload = "*,!lua,!tcl,!ruby,!fifo,!xfer,!guile,!javascript"
+autoload = "*"
 debug = off
 extension = ".so,.dll"
 path = "%h/plugins"
 save_config_on_unload = on
 
 [bar]
-activetitle.color_bg = 31
-activetitle.color_delim = default
-activetitle.color_fg = white
-activetitle.conditions = "${active}"
-activetitle.filling_left_right = vertical
-activetitle.filling_top_bottom = horizontal
-activetitle.hidden = off
-activetitle.items = "buffer_title"
-activetitle.position = top
-activetitle.priority = 500
-activetitle.separator = on
-activetitle.size = 1
-activetitle.size_max = 0
-activetitle.type = window
-buffers.color_bg = default
-buffers.color_delim = default
-buffers.color_fg = default
-buffers.conditions = ""
-buffers.filling_left_right = vertical
-buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
-buffers.items = "buffers"
-buffers.position = left
-buffers.priority = 0
-buffers.separator = on
-buffers.size = 0
-buffers.size_max = 0
-buffers.type = root
 buflist.color_bg = default
 buflist.color_delim = default
 buflist.color_fg = default
@@ -293,41 +259,41 @@ buflist.items = "buflist"
 buflist.position = left
 buflist.priority = 0
 buflist.separator = on
-buflist.size = 18
-buflist.size_max = 18
+buflist.size = 0
+buflist.size_max = 0
 buflist.type = root
-input.color_bg = black
-input.color_delim = default
+fset.color_bg = default
+fset.color_delim = cyan
+fset.color_fg = default
+fset.conditions = "${buffer.full_name} == fset.fset"
+fset.filling_left_right = vertical
+fset.filling_top_bottom = horizontal
+fset.hidden = off
+fset.items = "fset"
+fset.position = top
+fset.priority = 0
+fset.separator = on
+fset.size = 3
+fset.size_max = 3
+fset.type = window
+input.color_bg = default
+input.color_delim = cyan
 input.color_fg = default
 input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "[mode_indicator]+[buffer_name]+[input_prompt]+(away),[input_search],[input_paste],input_text,[vi_buffer]""
+input.items = "[input_prompt]+(away),[input_search],[input_paste],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
-input.size = 0
-input.size_max = 3
-input.type = root
-isetbar.color_bg = default
-isetbar.color_delim = cyan
-isetbar.color_fg = default
-isetbar.conditions = ""
-isetbar.filling_left_right = vertical
-isetbar.filling_top_bottom = horizontal
-isetbar.hidden = on
-isetbar.items = "isetbar_help"
-isetbar.position = top
-isetbar.priority = 0
-isetbar.separator = on
-isetbar.size = 3
-isetbar.size_max = 3
-isetbar.type = window
+input.size = 1
+input.size_max = 0
+input.type = window
 nicklist.color_bg = default
 nicklist.color_delim = cyan
-nicklist.color_fg = 229
-nicklist.conditions = "${nicklist} && ${window.number} == 1"
+nicklist.color_fg = 240
+nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
 nicklist.hidden = off
@@ -335,84 +301,54 @@ nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
-nicklist.size = 14
-nicklist.size_max = 14
+nicklist.size = 0
+nicklist.size_max = 0
 nicklist.type = window
-status.color_bg = 234
-status.color_delim = default
-status.color_fg = 31
+status.color_bg = 236
+status.color_delim = cyan
+status.color_fg = 247
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+{buffer_nicklist_count}+buffer_filter,[lag],[hotlist],completion,scroll"
+status.items = "buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count},scroll,[lag]"
 status.position = bottom
 status.priority = 500
-status.separator = on
+status.separator = off
 status.size = 1
 status.size_max = 0
-status.type = root
-title.color_bg = yellow
-title.color_delim = default
-title.color_fg = black
-title.conditions = "${inactive}"
+status.type = window
+title.color_bg = 236
+title.color_delim = cyan
+title.color_fg = 247
+title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
 title.hidden = off
 title.items = "buffer_title"
 title.position = top
-title.priority = 0
+title.priority = 500
 title.separator = off
 title.size = 1
 title.size_max = 0
 title.type = window
-vi_cmd.color_bg = default
-vi_cmd.color_delim = default
-vi_cmd.color_fg = default
-vi_cmd.conditions = ""
-vi_cmd.filling_left_right = vertical
-vi_cmd.filling_top_bottom = vertical
-vi_cmd.hidden = on
-vi_cmd.items = "cmd_text"
-vi_cmd.position = bottom
-vi_cmd.priority = 0
-vi_cmd.separator = off
-vi_cmd.size = 0
-vi_cmd.size_max = 0
-vi_cmd.type = root
-vi_line_numbers.color_bg = default
-vi_line_numbers.color_delim = default
-vi_line_numbers.color_fg = default
-vi_line_numbers.conditions = "${active} && ${weechat.bar.vi_cmd.hidden} == 0"
-vi_line_numbers.filling_left_right = vertical
-vi_line_numbers.filling_top_bottom = vertical
-vi_line_numbers.hidden = on
-vi_line_numbers.items = "line_numbers"
-vi_line_numbers.position = left
-vi_line_numbers.priority = 0
-vi_line_numbers.separator = off
-vi_line_numbers.size = 0
-vi_line_numbers.size_max = 0
-vi_line_numbers.type = window
 
 [layout]
-highlight.buffer = "core;weechat;1"
-highlight.buffer = "exec;exec.highlights;2"
-highlight.buffer = "perl;highmon;3"
-highlight.buffer = "perl;iset;4"
-highlight.buffer = "irc;server.subhacker;5"
-highlight.buffer = "irc;subhacker.#coding;6"
-highlight.buffer = "irc;subhacker.#Polls;7"
-highlight.window = "1;0;20;1;-;-"
-highlight.window = "2;1;0;0;irc;subhacker.#Polls"
-highlight.window = "3;1;0;0;perl;highmon"
-highlight.current = on
+default.buffer = "core;weechat;1"
+default.buffer = "irc;server.freenode;1"
+default.buffer = "irc;server.subhacker;2"
+default.buffer = "irc;freenode.#cyberpunk;3"
+default.window = "1;0;50;0;-;-"
+default.window = "2;1;0;0;irc;freenode.#cyberpunk"
+default.window = "3;1;50;1;-;-"
+default.window = "4;3;0;0;core;weechat"
+default.window = "5;3;0;0;core;weechat"
+default.current = on
 
 [notify]
 
 [filter]
 irc_smart = on;*;irc_smart_filter;*
-irc_join_names = on;*;irc_366,irc_332,irc_333,irc_329,irc_324;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -444,6 +380,8 @@ ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
 meta-meta-OP = "/bar scroll buflist * b"
 meta-meta-OQ = "/bar scroll buflist * e"
+meta-meta2-11~ = "/bar scroll buflist * b"
+meta-meta2-12~ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -483,6 +421,10 @@ meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
 meta-Od = "/input move_previous_word"
+meta2-11^ = "/bar scroll buflist * -100%"
+meta2-11~ = "/bar scroll buflist * -100%"
+meta2-12^ = "/bar scroll buflist * +100%"
+meta2-12~ = "/bar scroll buflist * +100%"
 meta2-15~ = "/buffer -1"
 meta2-17~ = "/buffer +1"
 meta2-18~ = "/window -1"
@@ -493,10 +435,14 @@ meta2-1;3C = "/buffer +1"
 meta2-1;3D = "/buffer -1"
 meta2-1;3F = "/window scroll_bottom"
 meta2-1;3H = "/window scroll_top"
+meta2-1;3P = "/bar scroll buflist * b"
+meta2-1;3Q = "/bar scroll buflist * e"
 meta2-1;5A = "/input history_global_previous"
 meta2-1;5B = "/input history_global_next"
 meta2-1;5C = "/input move_next_word"
 meta2-1;5D = "/input move_previous_word"
+meta2-1;5P = "/bar scroll buflist * -100%"
+meta2-1;5Q = "/bar scroll buflist * +100%"
 meta2-1~ = "/input move_beginning_of_line"
 meta2-200~ = "/input paste_start"
 meta2-201~ = "/input paste_stop"
@@ -525,10 +471,12 @@ meta2-I = "/window page_up"
 meta2-Z = "/input complete_previous"
 meta2-[E = "/buffer -1"
 meta-_ = "/input redo"
+meta-` = "/go"
 meta-a = "/input jump_smart"
-meta-b = "/bar toggle buffers"
+meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
+meta-g = "/go"
 meta-h = "/input hotlist_clear"
 meta-jmeta-f = "/buffer -"
 meta-jmeta-l = "/buffer +"
@@ -636,6 +584,7 @@ meta-j99 = "/buffer *99"
 meta-k = "/input grab_key_command"
 meta-l = "/window bare"
 meta-m = "/mute mouse toggle"
+meta-meta = "/go"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
@@ -680,6 +629,11 @@ meta2-A = "/cursor move up"
 meta2-B = "/cursor move down"
 meta2-C = "/cursor move right"
 meta2-D = "/cursor move left"
+@chat(python.*):D = "hsignal:slack_cursor_delete"
+@chat(python.*):L = "hsignal:slack_cursor_linkarchive"
+@chat(python.*):M = "hsignal:slack_cursor_message"
+@chat(python.*):R = "hsignal:slack_cursor_reply"
+@chat(python.*):T = "hsignal:slack_cursor_thread"
 @item(buffer_nicklist):K = "/window ${_window_number};/kickban ${nick}"
 @item(buffer_nicklist):b = "/window ${_window_number};/ban ${nick}"
 @item(buffer_nicklist):k = "/window ${_window_number};/kick ${nick}"
@@ -690,8 +644,6 @@ meta2-D = "/cursor move left"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
 
 [key_mouse]
-@bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
-@bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
 @bar(buflist):ctrl-wheeldown = "hsignal:buflist_mouse"
 @bar(buflist):ctrl-wheelup = "hsignal:buflist_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
@@ -699,10 +651,11 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
-@chat(perl.iset):button1 = "hsignal:iset_mouse"
-@chat(perl.iset):button2* = "hsignal:iset_mouse"
-@chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
-@chat(perl.iset):wheelup = "/repeat 5 /iset **up"
+@chat(fset.fset):button1 = "/window ${_window_number};/fset -go ${_chat_line_y}"
+@chat(fset.fset):button2* = "hsignal:fset_mouse"
+@chat(fset.fset):wheeldown = "/fset -down 5"
+@chat(fset.fset):wheelup = "/fset -up 5"
+@chat(python.*):button2 = "hsignal:slack_mouse"
 @chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
 @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
@@ -712,10 +665,12 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
 @item(buffer_nicklist):button2 = "/window ${_window_number};/whois ${nick}"
 @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
-@item(buffers):button1* = "hsignal:buffers_mouse"
-@item(buffers):button2* = "hsignal:buffers_mouse"
 @item(buflist):button1* = "hsignal:buflist_mouse"
 @item(buflist):button2* = "hsignal:buflist_mouse"
+@item(buflist2):button1* = "hsignal:buflist_mouse"
+@item(buflist2):button2* = "hsignal:buflist_mouse"
+@item(buflist3):button1* = "hsignal:buflist_mouse"
+@item(buflist3):button2* = "hsignal:buflist_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
