--- a/weechat/buflist.conf
+++ b/weechat/buflist.conf
@@ -10,6 +10,8 @@
 #
 
 [look]
+add_newline = on
+auto_scroll = 50
 display_conditions = "on"
 enabled = off
 mouse_jump_visited_buffer = off
@@ -32,5 +34,6 @@ hotlist_private = "${color:121}"
 hotlist_separator = "${color:default},"
 indent = " "
 lag = " ${color:green}[${color:brown}${lag}${color:green}]"
+name = "${name}"
 nick_prefix = "${color_nick_prefix}${nick_prefix}"
 number = "${if:${type}==server?${color:black,31}:${color:239}}${number}${if:${number_displayed}?.: }"
