--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -30,6 +30,7 @@ display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
 display_pv_back = on
+display_pv_warning_address = off
 highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
@@ -57,6 +58,7 @@ pv_tags = "notify_private"
 raw_messages = 256
 server_buffer = independent
 smart_filter = on
+smart_filter_chghost = on
 smart_filter_delay = 5
 smart_filter_join = on
 smart_filter_join_unmask = 30
@@ -72,11 +74,14 @@ item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
+message_chghost = brown
 message_join = green
+message_kick = red
 message_quit = red
 mirc_remap = "1,-1:darkgray"
 nick_prefixes = "y:lightred;q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
+reason_kick = default
 reason_quit = default
 topic_current = default
 topic_new = white
@@ -86,7 +91,6 @@ topic_old = default
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
 ban_mask_default = "*!$ident@$host"
-channel_encode = off
 colors_receive = on
 colors_send = on
 lag_check = 60
@@ -118,7 +122,8 @@ autorejoin = off
 autorejoin_delay = 30
 away_check = 0
 away_check_max_nicks = 25
-capabilities = ""
+capabilities = "account-notify,away-notify,cap-notify,multi-prefix,server-time,znc.in/self-message"
+charset_message = message
 command = ""
 command_delay = 0
 connection_timeout = 60
@@ -138,11 +143,13 @@ sasl_key = ""
 sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
-sasl_username = ""
+sasl_username = "klpanagi"
+split_msg_max_length = 512
 ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
+ssl_password = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 usermode = ""
@@ -154,6 +161,7 @@ freenode.proxy
 freenode.ipv6
 freenode.ssl = on
 freenode.ssl_cert
+freenode.ssl_password
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_fingerprint
@@ -189,11 +197,14 @@ freenode.msg_kick
 freenode.msg_part
 freenode.msg_quit
 freenode.notify
+freenode.split_msg_max_length
+freenode.charset_message
 subhacker.addresses = "irc.subhacker.net/6697"
 subhacker.proxy
 subhacker.ipv6
 subhacker.ssl = on
 subhacker.ssl_cert
+subhacker.ssl_password
 subhacker.ssl_priorities
 subhacker.ssl_dhkey_size
 subhacker.ssl_fingerprint
@@ -229,3 +240,5 @@ subhacker.msg_kick
 subhacker.msg_part
 subhacker.msg_quit
 subhacker.notify
+subhacker.split_msg_max_length
+subhacker.charset_message
