--- a/weechat/logger.conf
+++ b/weechat/logger.conf
@@ -11,6 +11,7 @@
 
 [look]
 backlog = 20
+backlog_conditions = ""
 
 [color]
 backlog_end = default
@@ -18,7 +19,9 @@ backlog_line = default
 
 [file]
 auto_log = on
+color_lines = off
 flush_delay = 120
+fsync = off
 info_lines = off
 mask = "$plugin.$name.weechatlog"
 name_lower_case = on
@@ -29,5 +32,7 @@ replacement_char = "_"
 time_format = "%Y-%m-%d %H:%M:%S"
 
 [level]
+irc = 4
 
 [mask]
+irc = "%Y/$server/$channel.%m-%d.log"
