Remove volume module - Use applet

--- a/polybar/polybar-2/config.ini
+++ b/polybar/polybar-2/config.ini
@@ -156,7 +156,7 @@ bottom = true
 ; modules-left = mpd right-end-bottom left-end-top cpu memory filesystem right-end-bottom
 modules-center = cpu memory filesystem network
 ; modules-right = left-end-bottom network right-end-top left-end-bottom volume brightness right-end-top left-end-bottom
-modules-right = volume brightness
+; modules-right = volume brightness
 modules-left = mpd
 
 enable-ipc = true
