--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,39 @@
+# Color definitions -----------{
+onedark_black="#282c34"
+onedark_blue="#61afef"
+onedark_yellow="#e5c07b"
+onedark_red="#e06c75"
+onedark_white="#aab2bf"
+onedark_green="#98c379"
+onedark_visual_grey="#3e4452"
+onedark_comment_grey="#5c6370"
+
+base16_green="#a1b56c"
+base16_red="#ab4642"
+base16_yellow="#f7ca88"
+base16_blue="#7cafc2"
+base16_magenta="#ba8baf"
+base16_cyan="#86c1b9"
+base16_c16="#dc9656"
+base16_c17="#a16946"
+base16_bright_blue="#7cafc2"
+base16_bright_yellow="#f7ca88"
+base16_bright_magenta="#ba8baf"
+
+maroon="#862633"
+brick="#9A3324"
+amethyst="#9063cd"
+white="#ffffff"
+orange="#d37815"
+orange2="#ff9234"
+red="#c7004c"
+red2="#d93817"
+light_red="#ab4642"
+blue="#503bff"
+bg_gray="#3e4452"
+purple="#c200fb"
+purple2="#7800ff"
+
 # Set Zsh as the default Tmux shell
 set -g default-shell /bin/zsh
 
@@ -110,43 +146,6 @@ bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "se
 bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 # ----------------------------}
 
-# Color definitions -----------{
-onedark_black="#282c34"
-onedark_blue="#61afef"
-onedark_yellow="#e5c07b"
-onedark_red="#e06c75"
-onedark_white="#aab2bf"
-onedark_green="#98c379"
-onedark_visual_grey="#3e4452"
-onedark_comment_grey="#5c6370"
-
-base16_green="#a1b56c"
-base16_red="#ab4642"
-base16_yellow="#f7ca88"
-base16_blue="#7cafc2"
-base16_magenta="#ba8baf"
-base16_cyan="#86c1b9"
-base16_c16="#dc9656"
-base16_c17="#a16946"
-base16_bright_blue="#7cafc2"
-base16_bright_yellow="#f7ca88"
-base16_bright_magenta="#ba8baf"
-
-## Nord palette: https://www.nordtheme.com/docs/colors-and-palettes
-nord0="#2E3440"
-nord1="#3B4252"
-nord2="#434C5E"
-nord3="#4C566A"
-nord7="#8fbcbb"
-nord8="#88c0d0"
-nord9="#81a1c1"
-nord10="#5e81ac"
-nord11="#BF616A"
-nord12="#D08770"
-nord13="#EBCB8B"
-nord14="#A3BE8C"
-nord15="#B48EAD"
-
 seperator="#[fg=$onedark_black,bg=$onedark_visual_grey,nobold,nounderscore,noitalics]"
 # -------------------}
 
@@ -222,23 +221,19 @@ set -g @cpu_percentage_format "%3.1f%%" # printf format to use to display percen
 
 set -g @net_speed_interfaces "wlp0s20f0u1"
 
-set -g window-status-format "#[fg=$base16_bright_yellow,bg=$nord3,bold][#I]:#W \
-#[fg=$onedark_black,bg=$onedark_black,nobold,nounderscore,noitalics]"
+set -g window-status-format "#[fg=$orange2,bold][#I]:#W"
 
-set -g window-status-current-format "#[fg=$nord3,bg=$base16_bright_yellow,bold][#I]:#W "
+set -g window-status-current-format "#[fg=$white,bg=$brick,bold][#I]:#W "
 
-set -g status-left "#[fg=$onedark_visual_grey,bg=$base16_green,bold,nounderscore,italics] \
-$ #S #[fg=$onedark_visual_grey,bg=$onedark_black,bold,noitalics,nounderscore] \
-#[fg=$base16_c16,bg=$onedark_visual_grey,bold][ #(whoami)@#H ]\
-#[fg=$onedark_visual_grey,bg=$onedark_black,bold,underscore,italics] \
+set -g status-left "#[fg=$white,bg=$base16_red,nounderscore,italics] \
+$ #S #[bg=$onedark_black,noitalics,nounderscore] \
+#[fg=$orange2][ #(whoami) @ #H ]\
 #{prefix_highlight}"
 
-set -g status-right "#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold]\
-[ CPU: #{cpu_percentage} #{cpu_icon} ]\
-#[fg=$onedark_visual_grey,bg=$onedark_black,nobold,noitalics,nounderscore]  \
-#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ Mem Free: #{free_mem} ]\
-#[fg=$onedark_visual_grey,bg=$onedark_black,bold] \
-#[fg=$base16_bright_blue,bg=$onedark_visual_grey,bold][ #{net_speed} ]"
+set -g status-right "#[fg=$orange2]\
+[ CPU-%: #{cpu_percentage} ]\
+#[fg=$orange2][ Mem Free: #{free_mem} ]\
+#[fg=$orange2][ #{net_speed} ]"
 # -------------------------}
 
 # upgrade $TERM
