--- a/i3/config
+++ b/i3/config
@@ -70,10 +70,10 @@ bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
 bindsym $mod+Shift+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
 bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 
-bindsym F10 exec rofi -modi drun -show drun -location 1 -xoffset 10 -yoffset 32 -line-padding 4 -columns 1 -width 20 -lines 10 -padding 25 -hide-scrollbar -show-icons -drun-icon-theme "Papirus"
+# bindsym F10 exec rofi -modi drun -show drun -location 1 -xoffset 10 -yoffset 32 -line-padding 4 -columns 1 -width 20 -lines 10 -padding 25 -hide-scrollbar -show-icons -drun-icon-theme "Papirus"
+bindsym F10 exec ~/.config/rofi/launchers-git/launcher.sh blurry
+# bindsym F10 exec ~/.config/rofi/launchers-git/launcher.sh
 bindsym F12 exec rofi -show window
-bindsym F9 exec ~/.config/rofi/launchers-git/launcher.sh blurry
-bindsym F8 exec ~/.config/rofi/launchers-git/launcher.sh
 bindsym $mod+i exec ~/.i3/scripts/i3_switch_workspace.sh
 
 
